--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -194,31 +194,38 @@ jobs:
           echo "A enviar a imagem Docker para Docker Hub"
           docker push rodrig0salv/minha-app:latest
 
-      - name: Deploy Translator via Bicep (robusto)
+      - name: Deploy Translator via Bicep (método robusto)
         id: deploy_translator
         uses: azure/cli@v1
         with:
           inlineScript: |
             echo "A criar Translator..."
 
-            # Executa e guarda a resposta JSON num ficheiro
+            DEPLOY_NAME="deploy-translator-$(date +%s)"
+
+            # Faz o deploy sem output
             az deployment group create \
               --resource-group "$RG" \
+              --name "$DEPLOY_NAME" \
               --template-file templates/translator.bicep \
-              --parameters translatorName="translator" \
-              -o json > translator_output.json
+              --parameters translatorName="translator"
 
-            # Extrai valores com jq a partir do ficheiro
-            TRANSLATOR_ENDPOINT=$(jq -r '.properties.outputs.translatorEndpoint.value' translator_output.json)
-            TRANSLATOR_KEY=$(jq -r '.properties.outputs.translatorKey.value' translator_output.json)
+            # Usa 'show' para ler os outputs de forma estável
+            OUTPUT=$(az deployment group show \
+              --resource-group "$RG" \
+              --name "$DEPLOY_NAME" \
+              -o json)
+
+            TRANSLATOR_ENDPOINT=$(echo $OUTPUT | jq -r '.properties.outputs.translatorEndpoint.value')
+            TRANSLATOR_KEY=$(echo $OUTPUT | jq -r '.properties.outputs.translatorKey.value')
 
             echo "TRANSLATOR_ENDPOINT=$TRANSLATOR_ENDPOINT" >> $GITHUB_OUTPUT
             echo "TRANSLATOR_KEY=$TRANSLATOR_KEY" >> $GITHUB_OUTPUT
 
-            # Debug opcional
-            echo "Translator criado com sucesso:"
+            echo "✅ Translator criado com sucesso:"
             echo "Endpoint: $TRANSLATOR_ENDPOINT"
             echo "Key: $TRANSLATOR_KEY"
+
 
 
 
